<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.lab13salary.MainActivity">

    <EditText
        android:id="@+id/editTextSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/input_Salary"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/editTextVehiclePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/input_Vehicle_Price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextSalary"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/editTextDownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/downPayment"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextVehiclePrice"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/interest_Rate"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/editTextDownPayment"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/editTextRepaymentMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/repayment_mouth"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextInterestRate"
        tools:layout_editor_absoluteX="85dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="391dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
        android:id="@+id/textViewMonthPayment"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginTop="21dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepaymentMonth"
        tools:layout_editor_absoluteX="86dp" />

</android.support.constraint.ConstraintLayout>
